# gen/http/openapi.yaml
@@ -34,26 +34,12 @@ paths:
                     description: OK response.
                     schema:
                         $ref: '#/definitions/AuthLoginResponseBody'
-            schemes:
-                - http
-    /logout:
-        post:
-            tags:
-                - auth
-            summary: logout auth
-            description: Logout of the system
-            operationId: auth#logout
-            parameters:
-                - name: LogoutRequestBody
-                  in: body
-                  required: true
-                  schema:
-                    $ref: '#/definitions/AuthLogoutRequestBody'
-                    required:
-                        - token
-            responses:
-                "200":
-                    description: OK response.
+                        required:
+                            - token
+                "401":
+                    description: Unauthorized response.
+                    schema:
+                        type: string
             schemes:
                 - http
     /register:
@@ -77,6 +63,8 @@ paths:
                     description: OK response.
                     schema:
                         $ref: '#/definitions/AuthRegisterResponseBody'
+                        required:
+                            - token
             schemes:
                 - http
     /tasks:
@@ -261,16 +249,6 @@ definitions:
                 example: Aut voluptatum eaque et.
         example:
             token: Minima qui quo.
-    AuthLogoutRequestBody:
-        title: AuthLogoutRequestBody
-        type: object
-        properties:
-            token:
-                type: string
-                description: JWT token to use for authentication
-                example: Adipisci nam recusandae placeat accusamus odio consectetur.
-        example:
-            token: Aut quos culpa voluptatum repellat minus ratione.
         required:
             - token
     AuthRegisterRequestBody:
@@ -301,6 +279,8 @@ definitions:
                 example: Provident tempora ad non accusamus sit delectus.
         example:
             token: Sed quis.
+        required:
+            - token
     BackendStoredTaskResponseBody:
         title: 'Mediatype identifier: applicaiton/vnd.backend.stored-task; view=default'
         type: object
@@ -308,15 +288,15 @@ definitions:
             createdAt:
                 type: string
                 description: When the todo was created in ISO format
-                example: Fugiat quo quia.
+                example: Pariatur fugiat asperiores illo sed.
             createdBy:
                 type: string
                 description: Who created the todo
-                example: Et eveniet veritatis doloremque ad accusamus.
+                example: Voluptas maxime nulla odio neque itaque.
             description:
                 type: string
                 description: Description of the todo
-                example: Sed consequuntur voluptas.
+                example: Accusamus odio.
             done:
                 type: boolean
                 description: Whether or not the todo is done
@@ -326,31 +306,31 @@ definitions:
                 type: string
                 description: When the todo was done in ISO format
                 default: ""
-                example: Odio neque itaque ea odio.
+                example: Aut quos culpa voluptatum repellat minus ratione.
             doneBy:
                 type: string
                 description: Who did the todo
                 default: ""
-                example: Nesciunt sequi nihil cumque.
+                example: Pariatur eos ut.
             id:
                 type: integer
                 description: Unique ID
-                example: 540689510
+                example: 3116138495
                 format: int32
             name:
                 type: string
                 description: Name of the todo
-                example: Eos ut aliquam pariatur fugiat asperiores.
+                example: Nam recusandae.
         description: A task (default view)
         example:
-            createdAt: Aperiam et enim itaque qui et est.
-            createdBy: Eum nulla.
-            description: Consequatur provident quisquam.
-            done: false
-            doneAt: Dolorem libero officia.
-            doneBy: Laborum voluptatem.
-            id: 2156207732
-            name: Assumenda dolorem voluptatem.
+            createdAt: Consequatur provident quisquam.
+            createdBy: Consequuntur dolorem libero officia aliquam laborum.
+            description: Quo quia quaerat et eveniet.
+            done: true
+            doneAt: Ad accusamus ea.
+            doneBy: Assumenda dolorem voluptatem.
+            id: 1974875452
+            name: Distinctio nesciunt sequi nihil cumque dolorem.
         required:
             - id
             - name
@@ -365,38 +345,38 @@ definitions:
             $ref: '#/definitions/BackendStoredTaskResponseBody'
         description: BackendStored-TaskCollectionResponseBody is the result type for an array of BackendStored-TaskResponseBody (default view)
         example:
-            - createdAt: Fugit neque error et repellat.
-              createdBy: Recusandae quae qui sed ut et.
-              description: Vero occaecati.
-              done: true
-              doneAt: Fugiat consequuntur excepturi voluptatibus tenetur nisi aut.
-              doneBy: Cumque quia.
-              id: 1130171229
-              name: Temporibus voluptate velit.
-            - createdAt: Fugit neque error et repellat.
-              createdBy: Recusandae quae qui sed ut et.
-              description: Vero occaecati.
-              done: true
-              doneAt: Fugiat consequuntur excepturi voluptatibus tenetur nisi aut.
-              doneBy: Cumque quia.
-              id: 1130171229
-              name: Temporibus voluptate velit.
-            - createdAt: Fugit neque error et repellat.
-              createdBy: Recusandae quae qui sed ut et.
-              description: Vero occaecati.
-              done: true
-              doneAt: Fugiat consequuntur excepturi voluptatibus tenetur nisi aut.
-              doneBy: Cumque quia.
-              id: 1130171229
-              name: Temporibus voluptate velit.
-            - createdAt: Fugit neque error et repellat.
-              createdBy: Recusandae quae qui sed ut et.
-              description: Vero occaecati.
-              done: true
-              doneAt: Fugiat consequuntur excepturi voluptatibus tenetur nisi aut.
-              doneBy: Cumque quia.
-              id: 1130171229
-              name: Temporibus voluptate velit.
+            - createdAt: Ab cumque quia accusamus.
+              createdBy: Neque error et repellat porro recusandae.
+              description: Nulla quaerat eos ipsa temporibus voluptate velit.
+              done: false
+              doneAt: Occaecati doloremque illum fugiat consequuntur.
+              doneBy: Voluptatibus tenetur nisi.
+              id: 2281551911
+              name: Et enim itaque qui et est voluptas.
+            - createdAt: Ab cumque quia accusamus.
+              createdBy: Neque error et repellat porro recusandae.
+              description: Nulla quaerat eos ipsa temporibus voluptate velit.
+              done: false
+              doneAt: Occaecati doloremque illum fugiat consequuntur.
+              doneBy: Voluptatibus tenetur nisi.
+              id: 2281551911
+              name: Et enim itaque qui et est voluptas.
+            - createdAt: Ab cumque quia accusamus.
+              createdBy: Neque error et repellat porro recusandae.
+              description: Nulla quaerat eos ipsa temporibus voluptate velit.
+              done: false
+              doneAt: Occaecati doloremque illum fugiat consequuntur.
+              doneBy: Voluptatibus tenetur nisi.
+              id: 2281551911
+              name: Et enim itaque qui et est voluptas.
+            - createdAt: Ab cumque quia accusamus.
+              createdBy: Neque error et repellat porro recusandae.
+              description: Nulla quaerat eos ipsa temporibus voluptate velit.
+              done: false
+              doneAt: Occaecati doloremque illum fugiat consequuntur.
+              doneBy: Voluptatibus tenetur nisi.
+              id: 2281551911
+              name: Et enim itaque qui et est voluptas.
     TaskCreateRequestBody:
         title: TaskCreateRequestBody
         type: object
@@ -404,25 +384,25 @@ definitions:
             created_by:
                 type: string
                 description: Who created the task
-                example: Est voluptate et architecto unde doloribus asperiores.
+                example: Hic est voluptate et.
             description:
                 type: string
                 description: Description of the task
-                example: Laborum tempora.
+                example: Rerum sit sed sequi iusto laborum.
             id:
                 type: integer
                 description: ID of task to create
-                example: 3996973052
+                example: 2087078681
                 format: int32
             name:
                 type: string
                 description: Name of the task
-                example: Quod sunt expedita rerum sit sed sequi.
+                example: Sed ut et nemo voluptas quod sunt.
         example:
             created_by: At aut beatae error.
             description: Sit et reiciendis dolores itaque.
-            id: 1166225143
-            name: Totam ut.
+            id: 191022876
+            name: Doloribus asperiores iste dolores totam ut.
         required:
             - name
             - created_by
@@ -434,14 +414,14 @@ definitions:
                 $ref: '#/definitions/BackendStoredTaskResponseBody'
         example:
             task:
-                createdAt: Cupiditate autem quibusdam.
-                createdBy: Soluta unde quibusdam aut et.
-                description: Voluptate dolores quas et ex.
-                done: true
-                doneAt: Molestiae sed vitae aperiam eaque qui.
-                doneBy: Nihil ipsam sunt autem accusamus beatae eaque.
-                id: 1602291338
-                name: Tempore et id labore ipsa ullam.
+                createdAt: Ipsam sunt autem.
+                createdBy: Beatae eaque.
+                description: Et id labore ipsa ullam dolores voluptate.
+                done: false
+                doneAt: Et ex est voluptatem.
+                doneBy: Sed vitae aperiam eaque qui voluptas.
+                id: 186740740
+                name: Et quam nihil aperiam asperiores corrupti quaerat.
     TaskDoneRequestBody:
         title: TaskDoneRequestBody
         type: object
@@ -462,14 +442,14 @@ definitions:
                 $ref: '#/definitions/BackendStoredTaskResponseBody'
         example:
             task:
-                createdAt: Cupiditate autem quibusdam.
-                createdBy: Soluta unde quibusdam aut et.
-                description: Voluptate dolores quas et ex.
-                done: true
-                doneAt: Molestiae sed vitae aperiam eaque qui.
-                doneBy: Nihil ipsam sunt autem accusamus beatae eaque.
-                id: 1602291338
-                name: Tempore et id labore ipsa ullam.
+                createdAt: Ipsam sunt autem.
+                createdBy: Beatae eaque.
+                description: Et id labore ipsa ullam dolores voluptate.
+                done: false
+                doneAt: Et ex est voluptatem.
+                doneBy: Sed vitae aperiam eaque qui voluptas.
+                id: 186740740
+                name: Et quam nihil aperiam asperiores corrupti quaerat.
     TaskListResponseBody:
         title: TaskListResponseBody
         type: object
@@ -478,22 +458,30 @@ definitions:
                 $ref: '#/definitions/BackendStoredTaskResponseBodyCollection'
         example:
             tasks:
-                - createdAt: Cupiditate autem quibusdam.
-                  createdBy: Soluta unde quibusdam aut et.
-                  description: Voluptate dolores quas et ex.
-                  done: true
-                  doneAt: Molestiae sed vitae aperiam eaque qui.
-                  doneBy: Nihil ipsam sunt autem accusamus beatae eaque.
-                  id: 1602291338
-                  name: Tempore et id labore ipsa ullam.
-                - createdAt: Cupiditate autem quibusdam.
-                  createdBy: Soluta unde quibusdam aut et.
-                  description: Voluptate dolores quas et ex.
-                  done: true
-                  doneAt: Molestiae sed vitae aperiam eaque qui.
-                  doneBy: Nihil ipsam sunt autem accusamus beatae eaque.
-                  id: 1602291338
-                  name: Tempore et id labore ipsa ullam.
+                - createdAt: Ipsam sunt autem.
+                  createdBy: Beatae eaque.
+                  description: Et id labore ipsa ullam dolores voluptate.
+                  done: false
+                  doneAt: Et ex est voluptatem.
+                  doneBy: Sed vitae aperiam eaque qui voluptas.
+                  id: 186740740
+                  name: Et quam nihil aperiam asperiores corrupti quaerat.
+                - createdAt: Ipsam sunt autem.
+                  createdBy: Beatae eaque.
+                  description: Et id labore ipsa ullam dolores voluptate.
+                  done: false
+                  doneAt: Et ex est voluptatem.
+                  doneBy: Sed vitae aperiam eaque qui voluptas.
+                  id: 186740740
+                  name: Et quam nihil aperiam asperiores corrupti quaerat.
+                - createdAt: Ipsam sunt autem.
+                  createdBy: Beatae eaque.
+                  description: Et id labore ipsa ullam dolores voluptate.
+                  done: false
+                  doneAt: Et ex est voluptatem.
+                  doneBy: Sed vitae aperiam eaque qui voluptas.
+                  id: 186740740
+                  name: Et quam nihil aperiam asperiores corrupti quaerat.
     TaskShowResponseBody:
         title: TaskShowResponseBody
         type: object
@@ -502,14 +490,14 @@ definitions:
                 $ref: '#/definitions/BackendStoredTaskResponseBody'
         example:
             task:
-                createdAt: Cupiditate autem quibusdam.
-                createdBy: Soluta unde quibusdam aut et.
-                description: Voluptate dolores quas et ex.
-                done: true
-                doneAt: Molestiae sed vitae aperiam eaque qui.
-                doneBy: Nihil ipsam sunt autem accusamus beatae eaque.
-                id: 1602291338
-                name: Tempore et id labore ipsa ullam.
+                createdAt: Ipsam sunt autem.
+                createdBy: Beatae eaque.
+                description: Et id labore ipsa ullam dolores voluptate.
+                done: false
+                doneAt: Et ex est voluptatem.
+                doneBy: Sed vitae aperiam eaque qui voluptas.
+                id: 186740740
+                name: Et quam nihil aperiam asperiores corrupti quaerat.
     TaskUpdateRequestBody:
         title: TaskUpdateRequestBody
         type: object
@@ -533,11 +521,11 @@ definitions:
                 $ref: '#/definitions/BackendStoredTaskResponseBody'
         example:
             task:
-                createdAt: Cupiditate autem quibusdam.
-                createdBy: Soluta unde quibusdam aut et.
-                description: Voluptate dolores quas et ex.
-                done: true
-                doneAt: Molestiae sed vitae aperiam eaque qui.
-                doneBy: Nihil ipsam sunt autem accusamus beatae eaque.
-                id: 1602291338
-                name: Tempore et id labore ipsa ullam.
+                createdAt: Ipsam sunt autem.
+                createdBy: Beatae eaque.
+                description: Et id labore ipsa ullam dolores voluptate.
+                done: false
+                doneAt: Et ex est voluptatem.
+                doneBy: Sed vitae aperiam eaque qui voluptas.
+                id: 186740740
+                name: Et quam nihil aperiam asperiores corrupti quaerat.
